--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> My Personal Blog</title>
   <link rel="stylesheet" href="./assets/css/blog.css"/>
-  <!-- <link rel="stylesheet" href="./assets/css/form.css"/>  -->
+  
   <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 
@@ -33,26 +33,8 @@
     </header>
     <div class="divider"></div>
     <main>
-        <article class="article">
-            <div class="articleTitle"> Blog Title</div>
-            <div class="articleContent"> This is Content Area</div>
-            <div class="articleAuthor"> Author:</div>
-        </article>
-        <article class="article">
-            <div class="articleTitle"> Blog Title 2</div>
-            <div class="articleContent"> This is Content Area</div>
-            <div class="articleAuthor"> Author:</div>
-         </article>
-        <article class="article">
-            <div class="articleTitle"> Blog Title 3</div>
-            <div class="articleContent"> This is Content Area</div>
-            <div class="articleAuthor"> Author:</div>
-        </article>
-        <article class="article">
-            <div class="articleTitle"> Blog Title 3</div>
-            <div class="articleContent"> This is Content Area</div>
-            <div class="articleAuthor"> Author:</div>
-        </article>
+        <section id="blogPosts"></section>
+       
     </main>
     <div class="divider"></div>
     <footer class="footer">
@@ -63,7 +45,7 @@
             <li class="liItem" href="Naira.davtyan08@gmail.com">Email: naira.davtyan08@gmail.com</li>
         </ul>
     </footer>
-    <script src = "./assets/JS/logic.js"></script>
     <script src ="./assets/JS/blog.js"></script>
+    <script src = "./assets/JS/logic.js"></script>
 </body>
 </html>
